fix: overflow fix

--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Urbanist&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Urbanist&display=swap");
 
 body {
-  font-family: 'Urbanist', sans-serif;
+  font-family: "Urbanist", sans-serif;
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   background-color: #f5f5f5;
+}
+
+.no-scroll {
+  overflow: hidden;
 }
 
 @keyframes fadeIn {
